k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
   template:
    metadata:
      labels:
        app: wisecow
